2021 some more Java17 features and intellij warnings
Signed-off-by: JoKrus <JoKrus@web.de>